# rust-firebase

./: Cargo.toml
src/: main.rs
