[package]
name = "rust-crud-firebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.6"
serde = "1.0.156"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
